Turn retrieved data into art placards

--- a/art/index.html
+++ b/art/index.html
@@ -21,8 +21,9 @@
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
 
-                <H1>A view of submitted art</H1>
-                <P>Request the server for just art, display usernames next to it</P>
+                <div id="art-container">
+
+                </div>
 
             </div>
             <nav id="footer"></nav>
