add loading spinner to arts view

--- a/art/index.html
+++ b/art/index.html
@@ -22,7 +22,7 @@
             <div id="content-wrap">
 
                 <div id="art-container">
-
+                    <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
                 </div>
 
             </div>
