--- a/art/contributors/index.html
+++ b/art/contributors/index.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript" src="/js/get-artists.js"></script>
 
-        <TITLE>Art View</TITLE>
+        <TITLE>Contributors</TITLE>
 
         <link href='/style.css' rel='stylesheet'>
     </HEAD>
