delete all the superfluous /index.html

--- a/signin/index.html
+++ b/signin/index.html
@@ -29,7 +29,7 @@
                     <br>
                     <input type="button" name="submitbutton" value="submit" onClick="signin(this.form);">
                 </form>
-                <br><br><br><P>Don't have an account? <a href="/signup/index.html">Sign Up!</a></P>
+                <br><br><br><P>Don't have an account? <a href="/signup">Sign Up!</a></P>
 
             </div>
             <nav id="footer"></nav>
