--- a/art/upload/index.html
+++ b/art/upload/index.html
@@ -11,21 +11,28 @@
         <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
 
-        <TITLE>View Card</TITLE>
+        <TITLE>Art Upload</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/upload-art.js"></script>
-        <script type="text/javascript" src="/js/get-cards.js"></script>
+        <script type="text/javascript" src="/js/get-card-list.js"></script>
 
         <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
-    <BODY onload="onLoadPage();getSingleCard();">
+    <BODY onload="onLoadPage();getCardList();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <script type="text/javascript">makeButton();</script>
             <div id="content-wrap">
-                
-                <div id="cards-container"></div>
+
+                <H1>upload form</H1>
+                <form action="">
+                    <input id="submission" name="submission" type="file" accept="image/png, image/jpeg, image/bmp" required="true">
+                    <select id="card-id-selector" name="cardID" required="true">
+                        <option value="">--choose a card--</option>
+                    </select>
+                    <input type="button" name="submitbutton" value="submit" onclick="uploadArt(this.form);">
+                </form>
 
             </div>
             <nav id="footer"></nav>
