implement a sign-in prompt, replace the sign-in page with it

--- a/art/upload/index.html
+++ b/art/upload/index.html
@@ -18,7 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
-    <BODY onload="onLoadPage();getCardList();">
+    <BODY onload="onLoadPage(true);getCardList();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
