Create indications of errors to provide basic feedback to user when something goes wrong

--- a/art/upload/index.html
+++ b/art/upload/index.html
@@ -30,7 +30,10 @@
                     <select id="card-id-selector" name="cardID" required>
                         <optgroup label="--choose a card--"></optgroup>
                     </select>
+                    <p id="card-list-error"></p>
                     <input type="button" name="submitbutton" value="submit" onclick="uploadArt(this.form);">
+
+                    <p id="upload-art-error"></p>
                 </form>
 
             </div>
