--- a/profile/index.html
+++ b/profile/index.html
@@ -54,6 +54,8 @@
                     <div class="manage-profile">
                         <span id="delete-account-link" onclick="confirmDeleteAccount()">Delete Account</span>
                     </div>
+
+                    <p id="profile-error"></p>
                 </div>
 
             </div>
