--- a/uhoh/index.html
+++ b/uhoh/index.html
@@ -9,22 +9,21 @@
         <meta content="utf-8" http-equiv="encoding">
 
         <script type="text/javascript" src="/js/check-login.js"></script>
-        <script type="text/javascript" src="/js/get-url.js"></script>
         
-        <TITLE>Leaving Website</TITLE>
+        <TITLE>Something Went Wrong</TITLE>
         <link href='/style.css' rel='stylesheet'>
 
         <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
-    <BODY onload="onLoadPage();getUrl()">
+    <BODY onload="onLoadPage();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
-                <div id="external-warning">
-                    <p>Random links on the internet are scary! This link was submitted by a user, and I might not have seen it yet. If it looks okay, go ahead and continue by clicking the link below. If it looks like it can't be trusted, please <a id="report" href="">let me know.</a></p>
-                    <a id="external-link"></a>
-                </div>
+
+                <H1>Uh Oh!</H1>
+                <P>If you got sent here, it means something went wrong in a way I didn't expect it to go wrong. Hopefully it was a freak abberation of nature and certainly not my mistake. You can go back and try again, but if the issue persists, please <a href="/contactme/">contact me</a> and let me know what you did before you got here.</P>
+
             </div>
             <nav id="footer"></nav>
         </div>
