--- a/art/submissions/index.html
+++ b/art/submissions/index.html
@@ -8,7 +8,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <script type="text/javascript" scr="/js/get-query-text.js"></script>
+        <script type="text/javascript" src="/js/get-query-text.js"></script>
         <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript" src="/js/get-art.js"></script>
 
